tests/errors/operand_type_53/e6.src
.IPPcode21

DEFVAR GF@var

NOT GF@var int@8
